; ModuleID = '/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_trace.c_tracereturn.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/tools/lcc/src/extr_trace.c_tracereturn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i8*, i32 }

@.str = private unnamed_addr constant [2 x i8] c"#\00", align 1
@frameno = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c" returned\00", align 1
@voidtype = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [2 x i8] c" \00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, %struct.TYPE_5__*, i64)* @tracereturn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tracereturn(%struct.TYPE_5__* %0, %struct.TYPE_5__* %1, i64 %2) #0 {
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca i64, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %4, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = load i8*, i8** %8, align 8
  %10 = call i32 @appendstr(i8* %9)
  %11 = call i32 @appendstr(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %12 = load i32, i32* @frameno, align 4
  %13 = call i64 @idtree(i32 %12)
  %14 = call i32 @tracevalue(i64 %13, i32 0)
  %15 = call i32 @appendstr(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %16 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 8
  %19 = call i64 @freturn(i32 %18)
  %20 = load i64, i64* @voidtype, align 8
  %21 = icmp ne i64 %19, %20
  br i1 %21, label %22, label %29

22:                                               ; preds = %3
  %23 = load i64, i64* %6, align 8
  %24 = icmp ne i64 %23, 0
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = call i32 @appendstr(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0))
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @tracevalue(i64 %27, i32 0)
  br label %29

29:                                               ; preds = %25, %22, %3
  %30 = call i32 @appendstr(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %31 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %32 = call i32 @tracefinis(%struct.TYPE_5__* %31)
  ret void
}

declare dso_local i32 @appendstr(i8*) #1

declare dso_local i32 @tracevalue(i64, i32) #1

declare dso_local i64 @idtree(i32) #1

declare dso_local i64 @freturn(i32) #1

declare dso_local i32 @tracefinis(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
